[package]
name = "vsr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.6" # Apache 2.0 / MIT
tracing = { version = "0.1.37", features = ["log"] } # MIT
parking_lot = "0.12.1" # Apache 2.0 / MIT

[dev-dependencies]
rand = "0.8.5" # Apache 2.0 / MIT
rand_chacha = "0.3.1" # Apache 2.0 / MIT
env_logger = "0.9.3" # Apache 2.0 / MIT
kani-verifier = "0.10.0" # Apache 2.0 / MIT
proptest = "1.0.0" # Apache 2.0 / MIT
shuttle = "0.3.0" # Apache 2.0

