[package]
name = "vsr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.37", features = ["log"] } # MIT
# std Mutex is closer to parking_lot wrt performance now; Also looking for parity with shuttle/loom
# https://github.com/rust-lang/rust/pull/95035#issuecomment-1073966631
#parking_lot = "0.12.1" # Apache 2.0 / MIT
# crossbeam-channel was merged into mpsc: https://github.com/rust-lang/rust/pull/93563
#crossbeam-channel = "0.5.6" # Apache 2.0 / MIT
thiserror = "1.0.37" # Apache 2.0 / MIT
shuttle = { version = "0.5.0", optional = true } # Apache 2.0

[dev-dependencies]
rand = "0.8.5" # Apache 2.0 / MIT
rand_chacha = "0.3.1" # Apache 2.0 / MIT
env_logger = "0.9.3" # Apache 2.0 / MIT
tracing-subscriber = "0.3.16" # MIT
kani-verifier = "0.10.0" # Apache 2.0 / MIT
proptest = "1.0.0" # Apache 2.0 / MIT

[features]
shuttle = ["dep:shuttle"]

[profile.release-lto]
inherits = "release"
lto = true

